--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <h1>All Highlight <br> Copa America 2021</h1>
                 <p>The 2021 Copa América was the 47th edition of the Copa América, the international men's ... All ten CONMEBOL national teams participated in the competition, divided into two geographical zones for the group. The semi-final fixture against
                     Colombia began with an early goal for Martínez in the seventh minute,</p>
-                <a target="_blank" href="https://web.programming-hero.com/"> <button>Watch Live <i class="fas fa-arrow-right"></i></button></a>
+                <a target="_blank" href="https://web.programming-hero.com/"> <button>Watch Now <i class="fas fa-arrow-right"></i></button></a>
             </div>
             <div class="rightsite">
                 <img src="images/match.png" alt="">
